--- a/src/stylesheets/Header.css
+++ b/src/stylesheets/Header.css
@@ -1,3 +1,47 @@
-h1{
-    color: blue;
-}
+header {
+    position: relative;
+    overflow: visible;
+  }
+
+  .hero-content {
+    background-color: #495E57;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .hero-text {
+    flex: 2;
+    color: #EDEFEE;
+    margin-left: 15%;
+  }
+  .hero-text h1 , .hero-text h4{
+    margin: 0;
+  }
+
+  .hero-text p{
+    margin-bottom: 5px;
+  }
+
+  #food {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 17%;
+    height: 110%;
+    margin-top: 2%;
+    margin-right: 20%;
+    border-radius: 5%;
+  }
+
+  .btn-hero{
+    background: #F4CE14;
+    color: black;
+    border-radius: 10px;
+    padding: 1%;
+    font-weight: bold;
+    border-style: none;
+    margin-bottom: 1.5%;
+  }
+
