--- a/src/stylesheets/Header.css
+++ b/src/stylesheets/Header.css
@@ -15,13 +15,28 @@ header {
     flex: 2;
     color: #EDEFEE;
     margin-left: 15%;
+    align-items: flex-start;
   }
-  .hero-text h1 , .hero-text h4{
+  .hero-text h1, h4{
     margin: 0;
+    font-family: 'Markazi Text', serif;
+    font-weight: normal;
+  }
+
+  .hero-text h1{
+    font-size: 4em;
+    color: #f4cf14bd;
+    margin-bottom: 0;
+  }
+
+  .hero-text h4{
+    font-size: 2.5em;
+    margin: auto;
   }
 
   .hero-text p{
     margin-bottom: 5px;
+    font-weight: 500;
   }
 
   #food {
