--- a/src/stylesheets/Header.css
+++ b/src/stylesheets/Header.css
@@ -21,17 +21,17 @@ header {
     margin: 0;
     font-family: 'Markazi Text', serif;
     font-weight: normal;
+    line-height: 0.8;
   }
 
   .hero-text h1{
     font-size: 4em;
     color: #f4cf14bd;
-    margin-bottom: 0;
+    margin-top: 2%;
   }
 
   .hero-text h4{
     font-size: 2.5em;
-    margin: auto;
   }
 
   .hero-text p{
