main component, title and button styles

--- a/src/stylesheets/Header.css
+++ b/src/stylesheets/Header.css
@@ -55,7 +55,7 @@ header {
     color: black;
     border-radius: 10px;
     padding: 1%;
-    font-weight: bold;
+    font-weight: 800;
     border-style: none;
     margin-bottom: 1.5%;
   }
