--- a/src/stylesheets/Main.css
+++ b/src/stylesheets/Main.css
@@ -1,3 +1,17 @@
-h2{
-    color: green;
+.main-title{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-left: 15%;
+    margin-right: 20%;
+    margin-top: 3%;
+}
+
+.btn-main{
+    padding: 15px;
+    border-radius: 10px;
+    border-style: none;
+    background: #FACE14;
+    color: black;
+    font-weight: 800;
 }
