--- a/src/stylesheets/Main.css
+++ b/src/stylesheets/Main.css
@@ -4,7 +4,11 @@
     align-items: center;
     margin-left: 15%;
     margin-right: 20%;
-    margin-top: 3%;
+    margin-top: 4%;
+}
+
+h1{
+    font-size: 3em;
 }
 
 .btn-main{
@@ -15,3 +19,53 @@
     color: black;
     font-weight: 800;
 }
+
+.cards {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .cards div {
+    max-width: 18%;
+    text-align: center;
+    background-color: #EDEFEE;
+    border-radius: 10%;
+  }
+  
+  .cards div:first-child{
+    margin-left: 15%;
+  }
+
+  .cards div:last-child{
+    margin-right: 20%;
+  }
+  
+  .cards img {
+    width: 100%;
+    height: auto;
+    border-radius: 10%;
+  }
+  
+  .cards h2 {
+    font-size: 1.5em;
+    margin-top: 10px;
+  }
+  
+  .cards .price {
+    font-size: 1.2em;
+  }
+  
+  .cards .description {
+    margin-top: 10px;
+  }
+  
+  .cards button {
+    background-color: #F4CE14;
+    color: black;
+    border-radius: 5px;
+    padding: 10px 20px;
+    font-weight: bold;
+    border: none;
+    margin-top: 10px;
+  }
+  
