--- a/src/stylesheets/Main.css
+++ b/src/stylesheets/Main.css
@@ -40,24 +40,25 @@ h1 {
 .cards-title {
   display: flex;
   flex-direction: row;
-  align-items: center;
+  align-items: flex-end;
   white-space: nowrap;
   margin-left: auto;
-  justify-content: flex-start;
   font-family: 'Markazi Text', serif;
 }
 
 .cards-title h2 {
   margin-left: 12px;
-  font-size: 1.2em;
+  font-size: 1.3em;
   margin-top: 10px;
-  margin-right: 10px; /* Ajusta este valor según tus necesidades */
+  margin-right: 10px;
 }
 
-.price {
-  font-size: 1.1rem;
+.cards-title .price {
+  font-size: 1.2rem;
   color: #EE9972;
   margin-right: 20%;
+  margin-left: auto;
+  font-weight: 600;
 }
 
 .description {
@@ -82,6 +83,7 @@ h1 {
 .cards img {
   width: 100%;
   height: 200px;
+  object-fit: cover;
   border-top-left-radius: 10%;
   border-top-right-radius: 10%;
 }
