--- a/src/stylesheets/Main.css
+++ b/src/stylesheets/Main.css
@@ -20,6 +20,7 @@ h1 {
   background: #FACE14;
   color: black;
   font-weight: 800;
+  cursor: pointer;
 }
 
 .cards {
@@ -86,6 +87,15 @@ h1 {
   object-fit: cover;
   border-top-left-radius: 10%;
   border-top-right-radius: 10%;
+}
+
+.card:hover {
+  transform: scale(1.03);
+  transition: transform 0.5s ease;
+}
+
+.cards img:hover{
+cursor: pointer;
 }
 
 .cards button {
