--- a/src/stylesheets/Testimonials.css
+++ b/src/stylesheets/Testimonials.css
@@ -1,10 +1,10 @@
-.title-testimonials > h1{
+.title-testimonials > h1 {
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-.grid-testimonials {
+  }
+  
+  .grid-testimonials {
     display: grid;
     grid-template-columns: 2fr 2fr 2fr 2fr;
     gap: 20px;
@@ -13,8 +13,61 @@
     max-width: 1000px;
     padding: 0 20px;
   }
-.cardT{
+  
+  .cardT {
+    position: relative;
     display: flex;
-    justify-content: center;
-    background-color: yellowgreen;
-}
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: space-around;
+    align-items: flex-start;
+    background-color: #495e53;
+    height: 150px;
+    width: 200px;
+    padding: 5px;
+  }
+  
+  .cardT p {
+    margin: 0;
+  }
+
+  .cardT .rating{
+    font-family: 'Markazi Text', serif;
+    font-weight: 200;
+    font-size: 25px;
+    color: #f4cf14bd;
+  }
+  
+  .cardT img {
+    width: 60px;
+    height: 60px;
+    border-radius: 5px;
+  }
+  
+  .cardT .name {
+    position: absolute;
+    top: 70px;
+    left: 80px;
+    font-family: -apple-system;
+    color: #EDEFEE;
+  }
+
+  .cardT .review {
+    margin: 0;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 14px;
+    color: #EDEFEE;
+  }
+
+  @media screen and (max-width: 400px) {
+    .grid-testimonials {
+      grid-template-columns: 1fr 1fr;
+      justify-items: center;
+    }
+    .grid-testimonials p{
+        position: absolute;
+        bottom: 90px;
+        left: 20px;
+        color: red;
+    }
+  }
