--- a/src/stylesheets/Nav.css
+++ b/src/stylesheets/Nav.css
@@ -10,6 +10,27 @@ nav ul{
     margin-right: -15px;
 }
 
+nav a:hover::after {
+    transform: scaleX(1);
+  }
+
+  nav a::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -2px;
+    width: 100%;
+    height: 2px;
+    background-color: #f4cf14bd;
+    transform: scaleX(0);
+    transition: transform 0.1s ease; /* Ajusta el valor de duración (0.3s) para una transición más suave */
+  }
+
+  nav a {
+    text-decoration: none;
+    position: relative;
+  }
+
 nav ul li:last-child{
     margin-right: 30%;
 }
