--- a/src/stylesheets/Testimonials.css
+++ b/src/stylesheets/Testimonials.css
@@ -25,6 +25,7 @@
     height: 150px;
     width: 200px;
     padding: 5px;
+    border-radius: 10px;
   }
   
   .cardT p {
@@ -57,6 +58,18 @@
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 14px;
     color: #EDEFEE;
+  }
+
+  .stars{
+    display: flex;
+    position: absolute;
+    left: 80px;
+    top: 20px;
+    overflow: auto;
+  }
+  
+  .star{
+    color: #F4CE14;
   }
 
   @media screen and (max-width: 400px) {
