--- a/src/stylesheets/Footer.css
+++ b/src/stylesheets/Footer.css
@@ -20,3 +20,10 @@
   .footer-list ul li:not(:first-child):hover {
     text-decoration: underline;
   }
+.footer-list img{
+  max-height: 5rem;
+  top: 50%;
+  background-color: rgb(255, 255, 255);
+  padding: 0.5rem;
+  margin-top: 1.2rem;
+}
