--- a/src/stylesheets/About.css
+++ b/src/stylesheets/About.css
@@ -13,7 +13,7 @@
     margin-bottom: -5px;
   }
   .about-container h3{
-    margin-top: 0;
+    margin-top: -3px;
   }
   .about-container p{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
