--- a/src/stylesheets/About.css
+++ b/src/stylesheets/About.css
@@ -1,46 +1,54 @@
-.about-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-gap: 100px;
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 20px;
-    position: relative;
-    margin-top: 8%;
-  }
+.about-us {
+  background-color: #EDEFEE;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 5rem;
+  padding: 1.25rem 2.5rem 1.25rem 0;
+  min-height: 22rem;
+  margin-bottom: -1rem;
+  margin-left: 15%;
+  margin-right: 20%;
+  margin-top: 1%;
+}
 
-  .about-container h1{
-    margin-bottom: -5px;
-  }
-  .about-container h3{
-    margin-top: -3px;
-  }
-  .about-container p{
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  }
+.about-subtext {
+  margin-top: -1.5rem;
+  color: black;
+}
 
-  .about-container .text-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    justify-content: flex-start;
-  }
+.double-image {
+  max-height: 18rem;
+  position: relative;
+  top: 4rem;
+  left: 2rem;
+}
 
-  .text-container {
-    margin-left: 13%;
-    margin-top: -22%;
-  }
+.double-image > img {
+  width: 38%;
+  height: 80%;
+  object-fit: cover;
+}
 
-  .adrian-img .adrian1{
-    width: 30%;
-    height: 100%;
-  }
+.about-1 {
+  position: relative;
+  top: 2rem;
+  left: 0;
+  z-index: 1;
+}
 
-  .adrian-img .adrian2 {
-    position: relative;
-    top: -90px;
-    right: 70px;
-    width: 30%;
-    height: 100%;
-    z-index: -1;
-  }
+.about-2 {
+  position: absolute;
+  top: -2.5rem;
+  left: 5rem;
+}
+
+.about-us .hero-text .title-about{
+  color: black;
+  padding-top: 1rem;
+}
+
+.about-us .hero-text .subtitle-about{
+  color: black;
+  margin-top: 0;
+  margin-bottom: 5rem;
+}
