--- a/src/stylesheets/Footer.css
+++ b/src/stylesheets/Footer.css
@@ -20,6 +20,7 @@
 
   .footer-list ul li:not(:first-child):hover {
     text-decoration: underline;
+    transition: 0.1s;
   }
 .footer-list img{
   max-height: 5rem;
