--- a/src/stylesheets/About.css
+++ b/src/stylesheets/About.css
@@ -24,9 +24,9 @@
 }
 
 .double-image > img {
-  width: 38%;
+  width: 60%;
   height: 80%;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 .about-1 {
@@ -50,5 +50,5 @@
 .about-us .hero-text .subtitle-about{
   color: black;
   margin-top: 0;
-  margin-bottom: 5rem;
+  margin-bottom: 4rem;
 }
