--- a/src/stylesheets/Main.css
+++ b/src/stylesheets/Main.css
@@ -21,6 +21,7 @@ h1 {
   color: black;
   font-weight: 800;
   cursor: pointer;
+  transition: background-color 0.3s ease;
 }
 .btn-main:hover{
   background: #ffdd35;
