--- a/src/stylesheets/Testimonials.css
+++ b/src/stylesheets/Testimonials.css
@@ -3,17 +3,16 @@
     justify-content: center;
     align-items: center;
   }
-  
+
   .grid-testimonials {
     display: grid;
-    grid-template-columns: 2fr 2fr 2fr 2fr;
-    gap: 20px;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 1000px;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 1rem;
+    margin-left: 16%;
+    margin-right: 20%;
     padding: 0 20px;
   }
-  
+
   .cardT {
     position: relative;
     display: flex;
@@ -27,7 +26,7 @@
     padding: 5px;
     border-radius: 10px;
   }
-  
+
   .cardT p {
     margin: 0;
   }
@@ -38,13 +37,13 @@
     font-size: 25px;
     color: black;
   }
-  
+
   .cardT img {
     width: 60px;
     height: 60px;
     border-radius: 5px;
   }
-  
+
   .cardT .name {
     position: absolute;
     top: 70px;
@@ -67,7 +66,7 @@
     top: 20px;
     overflow: auto;
   }
-  
+
   .star{
     color: #F4CE14;
   }
