Layout.js and css details

--- a/src/stylesheets/Footer.css
+++ b/src/stylesheets/Footer.css
@@ -6,6 +6,7 @@
     margin-bottom: 0;
     background-color: #495E57;
     justify-content: space-evenly;
+    margin-top: auto;
 }
 
 .footer-list ul li{
