--- a/src/stylesheets/Footer.css
+++ b/src/stylesheets/Footer.css
@@ -12,21 +12,62 @@
 .footer-list ul li{
     list-style-type: none;
     cursor: pointer;
+    margin-top: .5rem;
 }
 
 .footer-list ul li:first-child {
-    font-weight: bold;
+    font-weight: bolder;
     color: #FAC414;
   }
 
   .footer-list ul li:not(:first-child):hover {
     text-decoration: underline;
-    transition: 0.1s;
   }
+
+  .footer-list .links a{
+    display: flex;
+    color: white;
+    font-weight: normal;
+    margin-top: .2rem;
+  }
+
+  .footer-list .links a:not(:first-child):hover{
+    text-decoration: underline;
+  }
+
+.footer-list .links a:first-child{
+  font-weight: bolder;
+  color: #FAC414;
+  margin-top: .5rem;
+}
+
 .footer-list img{
   max-height: 5rem;
   top: 50%;
   background-color: rgb(255, 255, 255);
   padding: 0.5rem;
-  margin-top: 1.2rem;
+  margin-top: 1.5rem;
+  margin-left: 2rem;
+}
+
+.social-media {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-right: 2rem;
+}
+
+.logo-name {
+  margin-left: 0.2rem;
+}
+
+.footer-list li svg {
+  vertical-align: text-bottom;
+  margin-right: .3rem;
+  margin-bottom: 1px;
+}
+
+.footer-list li a {
+  color: #EDEFFE;
+  font-weight: normal;
 }
