--- a/src/stylesheets/Main.css
+++ b/src/stylesheets/Main.css
@@ -29,6 +29,9 @@ h1 {
 }
 .btn-main:hover{
   background: #ffdd35;
+  transition: all ease-in .1s;
+    transform: scale(1.05);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
 
 .cards {
