--- a/src/stylesheets/About.css
+++ b/src/stylesheets/About.css
@@ -5,7 +5,7 @@
   gap: 5rem;
   padding: 1.25rem 2.5rem 1.25rem 0;
   min-height: 22rem;
-  margin-bottom: 1rem;
+  margin-bottom: auto;
   margin-left: 15%;
   margin-right: 20%;
   margin-top: auto;
