--- a/src/stylesheets/Confirmations.css
+++ b/src/stylesheets/Confirmations.css
@@ -4,24 +4,26 @@
     color: white;
     margin-top: -1.4rem;
     min-height: 70vh;
+    margin-bottom: auto;
   }
-  
+
   .confirmation-image {
-    height: 70vh; /* height of container */
+    height: 100vh;
     width: 100%;
     object-fit: cover;
+    z-index: -1;
   }
-  
+
   .redirect-buttons {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-gap: 12vw;
+    grid-gap: 55%;
     position: absolute;
     top: 85%;
-    left: 50%;
+    left: 45%;
     transform: translate(-50%, -50%);
   }
-  
+
   .redirect-button {
     background-color: #464646;
     color: white !important;
@@ -31,9 +33,9 @@
     font-family: "Karla";
     font-size: 18px;
   }
-  
+
   .redirect-button:hover {
     background-color: #f4ce14;
     color: #464646;
-    transition: 0.2s;
+    transition: .9s;
   }
