--- a/src/stylesheets/Footer.css
+++ b/src/stylesheets/Footer.css
@@ -6,6 +6,7 @@
     background-color: #495E57;
     justify-content: space-evenly;
     margin-top: 1rem;
+    z-index: 1;
 }
 
 .footer-list ul li{
