--- a/src/stylesheets/Heading.css
+++ b/src/stylesheets/Heading.css
@@ -8,7 +8,8 @@
  
   .reserve-header-text {
     background-color: #495e57;
-    padding: 0 3rem 0 3rem;
+    padding: auto;
+    padding-bottom: 1rem;
     position: absolute;
     top: 50%;
     left: 50%;
